树组件的搜索框固定，提示框的错误按钮被文字压住修改

--- a/demo/isu-select-tree/index.html
+++ b/demo/isu-select-tree/index.html
@@ -64,7 +64,7 @@
       <isu-select-tree-new id="orgtree4" label="组织(模拟url)新(只读）" placeholder="请选择" src="/init.do"
                            multi value="2111,13,14" readonly is-view only-select-level="2"></isu-select-tree-new>
       <isu-select-tree-new id="orgtree5" label="组织(模拟url)新单选" placeholder="请选择" src="/init.do" placeholder="请选择"
-                           only-select-level="3,4"></isu-select-tree-new>
+                           only-select-level="3,4" show-search-input></isu-select-tree-new>
       <script>
         orgtree2.treeData = [
           { id: 1, label: '第1个', children: [
