--- a/demo/isu-tip/index.html
+++ b/demo/isu-tip/index.html
@@ -54,14 +54,14 @@ document.body.appendChild($_documentContainer.content);
         </style>
       </custom-style>
 
-      <isu-tip type="success" message="新建成功" id="tip" duration="20000" center></isu-tip>
+      <isu-tip type="success" message="新建成功新建成功新建成功新建成功新建成功新建成功新建成功新建成功新建成功新建成功新建成功新建成功新建成功" id="tip" duration="20000" center></isu-tip>
       <isu-button id="btn" onclick="tip.open();">Success</isu-button>
 
       <isu-tip type="warn" message="警告：warning,warning,warning,warning,warning,warning,warning" id="tip2"></isu-tip>
       <isu-button id="btn2" onclick="tip2.open(2000);">Warn</isu-button>
 
-      <isu-tip type="error" message="出错了：这是一条出错的提示消息, <br/>这是一条出错的提示消息" id="tip3"></isu-tip>
-      <isu-button id="btn3" onclick="tip3.open(5000);">Error</isu-button>
+      <isu-tip type="error" message="出错了：这是一条出错的提示消息, 这是一条出错的提示消息" id="tip3"></isu-tip>
+      <isu-button id="btn3" onclick="tip3.open(50000);">Error</isu-button>
 
       <isu-tip  message="这是自定义的图标" type="custom" icon-class="icons:build" duration="100000" id="tipCustom"></isu-tip>
       <isu-button id="btnCustom" onclick="tipCustom.open();">Custom</isu-button>
