--- a/demo/isu-input/index.html
+++ b/demo/isu-input/index.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
-  
+
   <title>isu-input demo</title>
-  
+
   <script type="module">
     import '../../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js';
     import '../../node_modules/@polymer/iron-demo-helpers/demo-pages-shared-styles.js';
     import '../../node_modules/@polymer/iron-demo-helpers/demo-snippet.js';
     import '../../isu-input'
   </script>
-  
+
   <script type="module">
     const $_documentContainer = document.createElement('template');
-    
+
     $_documentContainer.innerHTML = `<custom-style>
     <style is="custom-style" include="demo-pages-shared-styles">
       .centered {
@@ -33,7 +33,7 @@
       }
     </style>
   </custom-style>`;
-    
+
     document.body.appendChild($_documentContainer.content);
   </script>
 </head>
@@ -52,6 +52,7 @@
         </style>
       </custom-style>
       <isu-input class="typed-input" label="文本框" placeholder="Please input something..." clearable></isu-input>
+      <isu-input class="typed-input" label="限制输入文本框" placeholder="Please input number..." clearable allowed-pattern="[0-9]" prevent-invalid-input></isu-input>
       <isu-input class="typed-input" label="数字框" type="number" required min="10" max="20" prompt="请输入10到20之间的数字"></isu-input>
       <isu-input class="typed-input" label="电话" type="tel" maxlength="11" allowed-pattern="^1[3456789]\d{9}$" prompt="电话格式输入有误"></isu-input>
       <isu-input class="typed-input" label="密码框" type="password" show-password></isu-input>
@@ -159,6 +160,6 @@
     </template>
   </demo-snippet>
 </div>`
-  
+
 </body>
 </html>
