字体设置属性添加

--- a/demo/isu-checkbox-group/index.html
+++ b/demo/isu-checkbox-group/index.html
@@ -44,7 +44,7 @@
         <style is="custom-style">
         </style>
       </custom-style>
-      <isu-checkbox-group id="checkbox" label="材料" value="0, 1, 2" direction="column"></isu-checkbox-group>
+      <isu-checkbox-group font-size="larger" id="checkbox" label="材料" value="0, 1, 2" direction="column"></isu-checkbox-group>
       <script>
         checkbox.items = [
           {label: '薄膜', value: 0},
