--- a/demo/isu-input-number/index.html
+++ b/demo/isu-input-number/index.html
@@ -75,6 +75,8 @@ document.body.appendChild($_documentContainer.content)
       </script>
       <h4>只能输入步长的倍数</h4>
       <isu-input-number id="inputNumber6" step="2" step-strictly></isu-input-number>
+      <h4>字体大小</h4>
+      <isu-input-number id="inputNumber7" font-size="larger"></isu-input-number>
     </template>
   </demo-snippet>
 </body>
