--- a/demo/isu-mask/index.html
+++ b/demo/isu-mask/index.html
@@ -77,6 +77,9 @@ document.body.appendChild($_documentContainer.content);
       <isu-mask label="Picker多选框">
         <isu-picker id="picker" multi="" attr-for-value="id"></isu-picker>
       </isu-mask>
+      <isu-mask label="字体大小设置" font-size="small">
+        <isu-input placeholder="测试输入" value="梅西"></isu-input>
+      </isu-mask>
 
       <script>
         select.items = [
