--- a/demo/isu-radio/index.html
+++ b/demo/isu-radio/index.html
@@ -38,7 +38,7 @@
   <h3>isu-radio</h3>
   <demo-snippet>
     <template>
-      <isu-radio id="radio" label="性别" required></isu-radio>
+      <isu-radio id="radio" label="性别" required font-size="large"></isu-radio>
       <script>
         radio.items = [{value: 1, label: "男"}, {value: 2, label: "女"}];
       </script>
