--- a/demo/isu-select-tree/index.html
+++ b/demo/isu-select-tree/index.html
@@ -55,7 +55,7 @@
   <h3>支持单选、多选、输入关键字过滤下拉选项</h3>
   <demo-snippet>
     <template>
-      <isu-select-tree id="orgtree" label="组织(模拟url)" placeholder="请选择" src="/init.do" value="2111"></isu-select-tree>
+      <isu-select-tree id="orgtree" label="组织(模拟url)" placeholder="请选择" font-size="small" src="/init.do" value="2111"></isu-select-tree>
       <isu-input id="input" label="输入框" placeholder="请选择"></isu-input>
       <isu-select-tree id="orgtree2" label="组织（传入数据）" placeholder="请选择" value="21"></isu-select-tree>
 
@@ -63,7 +63,7 @@
                            multi value="2111,2112,2113,2114,2115" only-select-level="3,4"></isu-select-tree-new>
       <isu-select-tree-new id="orgtree4" label="组织(模拟url)新(只读）" placeholder="请选择" src="/init.do"
                            multi value="2111,13,14" readonly is-view only-select-level="2"></isu-select-tree-new>
-      <isu-select-tree-new id="orgtree5" label="组织(模拟url)新单选" placeholder="请选择" src="/init.do" placeholder="请选择"
+      <isu-select-tree-new id="orgtree5" font-size="large" label="组织(模拟url)新单选" placeholder="请选择" src="/init.do" placeholder="请选择"
                            only-select-level="3,4" show-search-input></isu-select-tree-new>
       <script>
         orgtree2.treeData = [
