--- a/demo/isu-textarea/index.html
+++ b/demo/isu-textarea/index.html
@@ -41,7 +41,7 @@ document.body.appendChild($_documentContainer.content);
   <h3>Basic isu-textarea demo</h3>
   <demo-snippet>
     <template>
-      <isu-textarea label="备注" placeholder="请输入备注"></isu-textarea>
+      <isu-textarea font-size="large" label="备注" placeholder="请输入备注"></isu-textarea>
     </template>
   </demo-snippet>
 
