--- a/demo/isu-upload/index.html
+++ b/demo/isu-upload/index.html
@@ -43,7 +43,7 @@
         <style>
         </style>
       </custom-style>
-      <isu-upload accept="" multiple src="src" id="upload"></isu-upload>
+      <isu-upload font-size="small" label="下载" accept="" multiple src="src" id="upload"></isu-upload>
       <script>
         upload.request = {formType: 'BANK'};
         console.log(upload.response);
