--- a/demo/isu-button-group/index.html
+++ b/demo/isu-button-group/index.html
@@ -7,16 +7,16 @@
   <title>isu-button-group demo</title>
 
   <script type="module">
-    import '../../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js';
-    import '../../node_modules/@polymer/iron-demo-helpers/demo-pages-shared-styles.js';
-    import '../../node_modules/@polymer/iron-demo-helpers/demo-snippet.js';
-    import '../../node_modules/@polymer/iron-icons/iron-icons.js';
-    import '../../node_modules/@polymer/paper-styles/color.js';
-    import '../../isu-button-group'
+    import '../../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js'
+import '../../node_modules/@polymer/iron-demo-helpers/demo-pages-shared-styles.js'
+import '../../node_modules/@polymer/iron-demo-helpers/demo-snippet.js'
+import '../../node_modules/@polymer/iron-icons/iron-icons.js'
+import '../../node_modules/@polymer/paper-styles/color.js'
+import '../../isu-button-group'
   </script>
  
     <script type="module">
-const $_documentContainer = document.createElement('template');
+const $_documentContainer = document.createElement('template')
 
 $_documentContainer.innerHTML = `<custom-style>
     <style is="custom-style" include="demo-pages-shared-styles">
@@ -35,9 +35,9 @@ $_documentContainer.innerHTML = `<custom-style>
       /*}*/
 
     </style>
-  </custom-style>`;
+  </custom-style>`
 
-document.body.appendChild($_documentContainer.content);
+document.body.appendChild($_documentContainer.content)
 </script>
 </head>
 <body>
@@ -72,36 +72,36 @@ document.body.appendChild($_documentContainer.content);
       <isu-button-group id="btnGrpSmall" label="测试小" size="small"></isu-button-group>
       <script>
         btnGrpSmall.items = [
-          {label: "测试1", value: "1"},
-          {label: "测试2", value: "2"},
-          {label: "测试3", value: "3"}
+          { label: '测试1', value: '1' },
+          { label: '测试2', value: '2' },
+          { label: '测试3', value: '3' }
         ]
       </script>
 
-      <isu-button-group id="btnGrp" label="测试"></isu-button-group>
+      <isu-button-group id="btnGrp" label="测试" font-size="x-small"></isu-button-group>
       <script>
         btnGrp.items = [
-          {label: "测试1", value: "1"},
-          {label: "测试2", value: "2", disabled: true},
-          {label: "测试3", value: "3"}
+          { label: '测试1', value: '1' },
+          { label: '测试2', value: '2', disabled: true },
+          { label: '测试3', value: '3' }
         ]
       </script>
 
       <isu-button-group id="btnGrpLarge" label="测试大" size="large" divided></isu-button-group>
       <script>
         btnGrpLarge.items = [
-          {label: "测试1", value: "1", permission: true},
-          {label: "测试2", value: "2", permission: false},
-          {label: "测试3", value: "3"}
+          { label: '测试1', value: '1', permission: true },
+          { label: '测试2', value: '2', permission: false },
+          { label: '测试3', value: '3' }
         ]
       </script>
 
       <isu-button-group id="btnGrpDisable" label="测试禁用" disabled></isu-button-group>
       <script>
         btnGrpDisable.items = [
-          {label: "测试1", value: "1"},
-          {label: "测试2", value: "2"},
-          {label: "测试3", value: "3"}
+          { label: '测试1', value: '1' },
+          { label: '测试2', value: '2' },
+          { label: '测试3', value: '3' }
         ]
       </script>
     </template>
@@ -113,13 +113,13 @@ document.body.appendChild($_documentContainer.content);
       <isu-button-group id="btnGrp2" label="测试" attr-for-label="name" hide-items-on-click></isu-button-group>
       <script>
         btnGrp2.items = [
-          {name: "测试1", value: "1"},
-          {name: "测试2", value: "2"},
-          {name: "测试3", value: "3"}
-        ];
-        btnGrp2.addEventListener('item-click', ({detail:{bindItem, target}}) => {
-          console.log(bindItem, target);
-        })
+          { name: '测试1', value: '1' },
+          { name: '测试2', value: '2' },
+          { name: '测试3', value: '3' }
+        ]
+btnGrp2.addEventListener('item-click', ({ detail: { bindItem, target } }) => {
+          console.log(bindItem, target)
+})
       </script>
     </template>
   </demo-snippet>
@@ -133,9 +133,9 @@ document.body.appendChild($_documentContainer.content);
         <div bind-item="3">测试3</div>
       </isu-button-group>
       <script>
-        btnGrp3.onItemClick = ({target, bindItem}) => {
-          console.log(target, bindItem);
-        }
+        btnGrp3.onItemClick = ({ target, bindItem }) => {
+          console.log(target, bindItem)
+}
       </script>
     </template>
   </demo-snippet>
@@ -182,12 +182,12 @@ document.body.appendChild($_documentContainer.content);
       </isu-button-group>
       <script>
         btnGrp4.items = [
-          {label: "测试1", value: "1"},
-          {label: "测试2", value: "2"},
-          {label: "测试3", value: "3"}
+          { label: '测试1', value: '1' },
+          { label: '测试2', value: '2' },
+          { label: '测试3', value: '3' }
         ]
         document.querySelectorAll('.btn')
-          .forEach(btn => btn.onclick = console.log);
+          .forEach(btn => btn.onclick = console.log)
       </script>
     </template>
   </demo-snippet>
