--- a/demo/isu-picker/index.html
+++ b/demo/isu-picker/index.html
@@ -53,9 +53,9 @@ document.body.appendChild($_documentContainer.content);
   <h3>支持单选、多选、输入关键字过滤下拉选项</h3>
   <demo-snippet>
     <template>
-      <isu-picker id="picker" label="单选" mode="text" text="99" attr-for-value="id" placeholder="请选择" clearable></isu-picker>
+      <isu-picker id="picker" label="单选" font-size="small" mode="text" text="99" attr-for-value="id" placeholder="请选择" clearable></isu-picker>
       <isu-picker id="picker1" label="多选" value="1,2,3,4" attr-for-value="id" multi placeholder="请选择" picker-meta='[{"field": "label", "label": "选项"}, {"field": "business", "label": "业务范围"}]'></isu-picker>
-      <isu-picker id="pickerAll" label="多选" value="1,2,3,4" attr-for-value="id" show-all
+      <isu-picker id="pickerAll" label="多选" font-size="large" value="1,2,3,4" attr-for-value="id" show-all
                  multi placeholder="请选择" picker-meta='[{"field": "label", "label": "选项"}, {"field": "business", "label": "业务范围"}]'></isu-picker>
       <script>
         const productPickerMeta = [{field: 'category', label: '分类'}, {field: 'designation', label: '牌号'}, {field: 'manufacturerName', label: '生产商'}, {field: 'originCountry', label: '产地'}];
