--- a/demo/isu-select/index.html
+++ b/demo/isu-select/index.html
@@ -47,9 +47,9 @@ document.body.appendChild($_documentContainer.content);
           }
         </style>
       </custom-style>
-      <isu-select id="select" label="球员" placeholder="选择球员" value="1" required prompt="球员选择不能为空"></isu-select>
+      <isu-select id="select" label="球员" font-size="large" placeholder="选择球员" value="1" required prompt="球员选择不能为空"></isu-select>
       <isu-select id="select1" label="球员" placeholder="选择球员" multi="" value="1, 2, 3, 4"></isu-select>
-      <isu-select id="selectShow" label="球员" placeholder="选择球员" multi="" show-all value="1, 2, 3, 4"></isu-select>
+      <isu-select id="selectShow" font-size="small" label="球员" placeholder="选择球员" multi="" show-all value="1, 2, 3, 4"></isu-select>
       <script>
         const items = [
           {"label": "梅西", "value": 1},
