给label添加冒号

--- a/demo/isu-input/index.html
+++ b/demo/isu-input/index.html
@@ -52,7 +52,7 @@
         </style>
       </custom-style>
       <isu-input class="typed-input" label="文本框" placeholder="Please input something..." clearable></isu-input>
-      <isu-input class="typed-input" label="限制输入文本框" placeholder="Please input number..." clearable allowed-pattern="[0-9]" prevent-invalid-input></isu-input>
+      <isu-input class="typed-input" label="限制输入文本" placeholder="Please input number..." clearable allowed-pattern="[0-9]" prevent-invalid-input></isu-input>
       <isu-input class="typed-input" label="数字框" type="number" required min="10" max="20" prompt="请输入10到20之间的数字"></isu-input>
       <isu-input class="typed-input" label="电话" type="tel" maxlength="11" allowed-pattern="^1[3456789]\d{9}$" prompt="电话格式输入有误"></isu-input>
       <isu-input class="typed-input" label="密码框" type="password" show-password></isu-input>
