--- a/demo/isu-status-select/index.html
+++ b/demo/isu-status-select/index.html
@@ -37,7 +37,7 @@ document.body.appendChild($_documentContainer.content);
   <h3>isu-status-select demo</h3>
   <demo-snippet>
     <template>
-      <isu-status-select id="demo1" label="状态"></isu-status-select>
+      <isu-status-select id="demo1" label="状态" font-size="small"></isu-status-select>
       <isu-status-select id="demo2" label="状态2" no-count></isu-status-select>
 
       <script>
