--- a/demo/isu-select-tree/index.html
+++ b/demo/isu-select-tree/index.html
@@ -9,45 +9,45 @@
   <script type="text/javascript" src="../../utils/mock_setup.js"></script>
 
   <script type="module">
-    import '../../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js';
-    import '../../node_modules/@polymer/iron-demo-helpers/demo-pages-shared-styles.js';
-    import '../../node_modules/@polymer/iron-demo-helpers/demo-snippet.js';
-    import '../../isu-select-tree';
-    import '../../isu-select-tree-new';
-    import '../../isu-input';
-    if (!window.location.href.endsWith("?mock=mockData.js")) {
-      window.location.href = window.location.href + "?mock=mockData.js";
-    }
+    import '../../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js'
+import '../../node_modules/@polymer/iron-demo-helpers/demo-pages-shared-styles.js'
+import '../../node_modules/@polymer/iron-demo-helpers/demo-snippet.js'
+import '../../isu-select-tree'
+import '../../isu-select-tree-new'
+import '../../isu-input'
+if (!window.location.href.endsWith('?mock=mockData.js')) {
+      window.location.href = window.location.href + '?mock=mockData.js'
+}
   </script>
 
   <script type="module">
-    const $_documentContainer = document.createElement('template');
+    const $_documentContainer = document.createElement('template')
 
-    $_documentContainer.innerHTML = `<custom-style>
-    <style is="custom-style" include="demo-pages-shared-styles">
-      .centered {
-        min-width: 800px;
-      }
+$_documentContainer.innerHTML = `<custom-style>
+<style is="custom-style" include="demo-pages-shared-styles">
+  .centered {
+    min-width: 800px;
+  }
 
-      demo-snippet {
-        --demo-snippet-code: {
-          max-height: 500px;
-        }
-      }
+  demo-snippet {
+    --demo-snippet-code: {
+      max-height: 500px;
+    }
+  }
 
-      #picker6 {
-        --isu-picker-input-width: 170px;
-        --isu-picker-tags-box-width: 180px;
-      }
+  #picker6 {
+    --isu-picker-input-width: 170px;
+    --isu-picker-tags-box-width: 180px;
+  }
 
-      isu-picker {
-        margin-bottom: 10px;
-      }
+  isu-picker {
+    margin-bottom: 10px;
+  }
 
-    </style>
-  </custom-style>`;
+</style>
+  </custom-style>`
 
-    document.body.appendChild($_documentContainer.content);
+document.body.appendChild($_documentContainer.content)
   </script>
 </head>
 <body>
@@ -55,6 +55,15 @@
   <h3>支持单选、多选、输入关键字过滤下拉选项</h3>
   <demo-snippet>
     <template>
+      <custom-style>
+        <style>
+          isu-select-tree-new {
+              --isu-label: {
+                width: 150px;
+              };
+          }
+        </style>
+      </custom-style>
       <isu-select-tree id="orgtree" label="组织(模拟url)" placeholder="请选择" font-size="small" src="/init.do" value="2111"></isu-select-tree>
       <isu-input id="input" label="输入框" placeholder="请选择"></isu-input>
       <isu-select-tree id="orgtree2" label="组织（传入数据）" placeholder="请选择" value="21"></isu-select-tree>
@@ -67,13 +76,17 @@
                            only-select-level="3,4" show-search-input></isu-select-tree-new>
       <script>
         orgtree2.treeData = [
-          { id: 1, label: '第1个', children: [
+          {
+    id: 1,
+    label: '第1个',
+    children: [
               { id: 11, label: '二级第1个', children: [] },
               { id: 12, label: '二级第2个', children: [] },
               { id: 13, label: '二级第3个', children: [] },
               { id: 14, label: '二级第4个', children: [] },
               { id: 15, label: '二级第5个', children: [] }
-            ] },
+            ]
+  },
           {
             id: 2,
             label: '第2个',
@@ -90,7 +103,7 @@
                   {
                     id: 211,
                     label: '三级1第1个',
-                    showLevel2:true,
+                    showLevel2: true,
                     children: [
                       { id: 2111, label: '1', children: [] },
                       { id: 2112, label: '2', checked: true, children: [] },
@@ -111,11 +124,17 @@
               { id: 25, label: '二级第5个', children: [] }
             ]
           },
-          { id: 3, label: '第3个', children: [ {
+          {
+    id: 3,
+    label: '第3个',
+    children: [{
               id: 31,
-              label: '三级第1个'},{
+              label: '三级第1个'
+    }, {
               id: 32,
-              label: '三级第2个'}] },
+              label: '三级第2个'
+    }]
+  },
           { id: 4, label: '第4个', children: [] },
           { id: 5, label: '第5个', children: [] }
         ]
