--- a/demo/isu-button-group/index.html
+++ b/demo/isu-button-group/index.html
@@ -67,6 +67,9 @@ document.body.appendChild($_documentContainer.content);
               background: #000;
             }
           }
+          #btnGrp2 {
+            --isu-button-group-height: 50px;
+          }
         </style>
       </custom-style>
       <isu-button-group id="btnGrpSmall" label="测试小" size="small"></isu-button-group>
