--- a/demo/isu-checkbox-group/index.html
+++ b/demo/isu-checkbox-group/index.html
@@ -42,6 +42,9 @@
     <template>
       <custom-style>
         <style is="custom-style">
+          #checkbox1 {
+            --isu-checkbox-group-height: 50px;
+          }
         </style>
       </custom-style>
       <isu-checkbox-group id="checkbox" label="材料" value="0, 1, 2" direction="column"></isu-checkbox-group>
