--- a/demo/isu-picker/index.html
+++ b/demo/isu-picker/index.html
@@ -36,6 +36,7 @@ $_documentContainer.innerHTML = `<custom-style>
       #picker6 {
         --isu-picker-input-width: 170px;
         --isu-picker-tags-box-width: 180px;
+        --isu-picker-height: 40px;
       }
 
       isu-picker {
