--- a/demo/isu-select/index.html
+++ b/demo/isu-select/index.html
@@ -42,6 +42,9 @@ document.body.appendChild($_documentContainer.content);
     <template>
       <custom-style>
         <style>
+          #select {
+            --isu-select-height: 50px;
+          }
           #selectShow {
             --isu-select-width: 340px
           }
