--- a/demo/isu-button/index.html
+++ b/demo/isu-button/index.html
@@ -47,6 +47,7 @@
           }
 
           #btn2 {
+            --isu-button-height: 60px;
             --isu-button: {
               background: #000;
               color: white
