--- a/demo/isu-select-tree/index.html
+++ b/demo/isu-select-tree/index.html
@@ -56,17 +56,16 @@
   <demo-snippet>
     <template>
       <isu-select-tree id="orgtree" label="组织(模拟url)" placeholder="请选择" src="/init.do" value="2111"></isu-select-tree>
-      <isu-input id="input" label="输入框" placeholder="请选择"></isu-input>
       <isu-select-tree id="orgtree2" label="组织（传入数据）" placeholder="请选择" value="21"></isu-select-tree>
 
       <isu-select-tree-new id="orgtree3" label="组织(模拟url)新多选" placeholder="请选择" src="/init.do" show-search-input
-                           multi value="2111,2112,2113,2114,2115" only-select-level="3,4"></isu-select-tree-new>
+                           multi value="2111,2112,2113,2114,2115" ></isu-select-tree-new>
       <isu-select-tree-new id="orgtree4" label="组织(模拟url)新(只读）" placeholder="请选择" src="/init.do"
-                           multi value="2111,13,14" readonly is-view only-select-level="2"></isu-select-tree-new>
+                           multi value="2111,13,14" readonly is-view ></isu-select-tree-new>
       <isu-select-tree-new id="orgtree5" label="组织(模拟url)新单选" placeholder="请选择" src="/init.do" placeholder="请选择"
-                           only-select-level="3,4" show-search-input></isu-select-tree-new>
+                           show-search-input></isu-select-tree-new>
       <script>
-        orgtree2.treeData = [
+        orgtree2.data = [
           { id: 1, label: '第1个', children: [
               { id: 11, label: '二级第1个', children: [] },
               { id: 12, label: '二级第2个', children: [] },
