--- a/demo/isu-select-tree/index.html
+++ b/demo/isu-select-tree/index.html
@@ -52,18 +52,13 @@
 </head>
 <body>
 <div class="vertical-section-container centered">
-  <h3>支持单选、多选、输入关键字过滤下拉选项</h3>
+  <h3>isu-select-tree Demo,只支持单选</h3>
   <demo-snippet>
     <template>
       <isu-select-tree id="orgtree" label="组织(模拟url)" placeholder="请选择" src="/init.do" value="2111"></isu-select-tree>
       <isu-select-tree id="orgtree2" label="组织（传入数据）" placeholder="请选择" value="21"></isu-select-tree>
-
-      <isu-select-tree-new id="orgtree3" label="组织(模拟url)新多选" placeholder="请选择" src="/init.do" show-search-input
-                           multi init-filter-value="3" only-select-level="1"></isu-select-tree-new>
-      <isu-select-tree-new id="orgtree4" label="组织(模拟url)新(只读）" placeholder="请选择" src="/init.do"
-                           multi value="3,31,32" readonly is-view></isu-select-tree-new>
-      <isu-select-tree-new id="orgtree5" label="组织(模拟url)新单选" placeholder="请选择" src="/init.do" placeholder="请选择"
-                           only-select-level="3,4" show-search-input></isu-select-tree-new>
+      <isu-select-tree id="orgtree3" label="选项rdaio" placeholder="请选择" src="/init.do" value="2111" show-radio></isu-select-tree>
+      <isu-select-tree id="orgtree4" label="显示搜索框" placeholder="请选择" src="/init.do" value="2111" show-search-input></isu-select-tree>
       <script>
         orgtree2.data = [
           { id: 1, label: '第1个', children: [
@@ -110,14 +105,35 @@
               { id: 25, label: '二级第5个', children: [] }
             ]
           },
-          { id: 3, label: '第3个', children: [ {
+          { id: 3, label: '第3个', children: [{
               id: 31,
-              label: '三级第1个'},{
+              label: '三级第1个'}, {
               id: 32,
               label: '三级第2个'}] },
           { id: 4, label: '第4个', children: [] },
           { id: 5, label: '第5个', children: [] }
         ]
+      </script>
+    </template>
+  </demo-snippet>
+
+  <h3>isu-select-tree-new Demo,支持单选、多选、输入关键字过滤下拉选项</h3>
+  <demo-snippet>
+    <template>
+      <isu-select-tree-new id="neworgtree1" label="单选" placeholder="请选择" src="/init.do" show-search-input
+                           value="2111"></isu-select-tree-new>
+      <isu-select-tree-new id="neworgtree2" label="多选" placeholder="请选择" src="/init.do" show-search-input
+                           multi value="3,31,32"></isu-select-tree-new>
+      <isu-select-tree-new id="neworgtree3" label="多选有搜索框" placeholder="请选择" src="/init.do" show-search-input
+                           multi value="3,31,32"></isu-select-tree-new>
+      <isu-select-tree-new id="neworgtree4" label="仅显示3、4层级" placeholder="请选择" src="/init.do" show-search-input
+                           multi only-select-level="3,4"></isu-select-tree-new>
+      <isu-select-tree-new id="neworgtree5" label="仅显示3、4层级，初始化数据" placeholder="请选择" src="/init.do" show-search-input
+                           multi only-select-level="3,4" init-filter-value="2111,2115"
+      ></isu-select-tree-new>
+      <isu-select-tree-new id="neworgtree6" label="(只读）" placeholder="请选择" src="/init.do"
+                           multi value="3,31,32" readonly is-view></isu-select-tree-new>
+      <script>
       </script>
     </template>
   </demo-snippet>
