--- a/demo/isu-button/index.html
+++ b/demo/isu-button/index.html
@@ -47,7 +47,6 @@
           }
 
           #btn2 {
-            --isu-button-height: 60px;
             --isu-button: {
               background: #000;
               color: white
@@ -71,7 +70,7 @@
         <isu-button disabled>Disabled</isu-button>
       </div>
       <div>
-        <isu-button size="small">small</isu-button>
+        <isu-button size="small" font-size="small">small</isu-button>
         <isu-button size="normal">normal</isu-button>
         <isu-button size="large">large</isu-button>
       </div>
