--- a/demo/isu-checkbox-group/index.html
+++ b/demo/isu-checkbox-group/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
-  
+
   <title>isu-checkbox-group demo</title>
-  
+
   <script type="module">
     import '../../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js';
     import '../../node_modules/@polymer/iron-demo-helpers/demo-pages-shared-styles.js';
@@ -14,10 +14,10 @@
     import '../../node_modules/@polymer/paper-styles/color.js';
     import '../../isu-checkbox-group'
   </script>
-  
+
   <script type="module">
     const $_documentContainer = document.createElement('template');
-    
+
     $_documentContainer.innerHTML = `<custom-style>
     <style is="custom-style" include="demo-pages-shared-styles">
       .centered {
@@ -31,7 +31,7 @@
       }
     </style>
   </custom-style>`;
-    
+
     document.body.appendChild($_documentContainer.content);
   </script>
 </head>
@@ -47,7 +47,7 @@
           }
         </style>
       </custom-style>
-      <isu-checkbox-group id="checkbox" label="材料" value="0, 1, 2" direction="column"></isu-checkbox-group>
+      <isu-checkbox-group font-size="larger" id="checkbox" label="材料" value="0, 1, 2" direction="column"></isu-checkbox-group>
       <script>
         checkbox.items = [
           {label: '薄膜', value: 0},
