--- a/demo/isu-image-upload/index.html
+++ b/demo/isu-image-upload/index.html
@@ -65,7 +65,7 @@ document.body.appendChild($_documentContainer.content);
         <style>
         </style>
       </custom-style>
-      <isu-image-upload id="uploaderView" label="Large Picture" type="view" size="large"
+      <isu-image-upload id="uploaderView" label="Large Picture" type="view" size="large" font-size="large"
                        src="https://d1.awsstatic.com/product-marketing/Elastic%20Beanstalk/ElasticBeanstalk_Benefit_Productivity.5cd0e6aedfa2e3b2c05ed7f5faeb0fd215c9742b.png"></isu-image-upload>
       <isu-image-upload id="uploaderView" label="Normal Picture" type="view"
                        src="https://d1.awsstatic.com/product-marketing/Elastic%20Beanstalk/ElasticBeanstalk_Benefit_Productivity.5cd0e6aedfa2e3b2c05ed7f5faeb0fd215c9742b.png"></isu-image-upload>
