--- a/demo/isu-input-jedate/index.html
+++ b/demo/isu-input-jedate/index.html
@@ -4,17 +4,17 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
   <title>isu-input-date demo</title>
-  
+
   <script type="module">
     import '../../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js';
     import '../../node_modules/@polymer/iron-demo-helpers/demo-pages-shared-styles.js';
     import '../../node_modules/@polymer/iron-demo-helpers/demo-snippet.js';
     import '../../isu-input-jedate'
   </script>
-  
+
   <script type="module">
     const $_documentContainer = document.createElement('template');
-    
+
     $_documentContainer.innerHTML = `<custom-style>
     <style is="custom-style" include="demo-pages-shared-styles">
       .centered {
@@ -32,39 +32,39 @@
       }
     </style>
   </custom-style>`;
-    
+
     document.body.appendChild($_documentContainer.content);
   </script>
 </head>
 <body>
 <h3>基本用法</h3>
-  <demo-snippet>
-    <template>
-      <custom-style>
-        <style is="custom-style">
-          .input-date {
-            --isu-label: {
-              width: 120px;
-            }
+<demo-snippet>
+  <template>
+    <custom-style>
+      <style is="custom-style">
+        .input-date {
+          --isu-label: {
+            width: 120px;
           }
-          .multi {
-            width: 340px;
-            margin-bottom: 10px;
-          }
-          #jedate1 {
-            --isu-input-jedate-height: 40px;
-          }
-        </style>
-      </custom-style>
-      <isu-input-jedate id="jedate1" class="input-date multi" label="年选择" format="YYYY" placeholder="YYYY" required></isu-input-jedate>
-      <isu-input-jedate class="input-date multi" label="年月选择" format="YYYY-MM" placeholder="YYYY-MM"></isu-input-jedate>
-      <isu-input-jedate class="input-date multi" label="年月日选择" format="MM-DD-YYYY" placeholder="MM-DD-YYYY"></isu-input-jedate>
-      <isu-input-jedate class="input-date multi" label="年月日时分秒选择" festival min="1900-01-01" max="2099-12-31"
-                       format="YYYY-MM-DD hh:mm:ss" placeholder="YYYY-MM-DD hh:mm:ss"></isu-input-jedate>
-      <isu-input-jedate class="input-date multi" label="时分秒选择" format="hh:mm:ss"
-                       min="01:02:08" max="15:25:35" placeholder="hh:mm:ss"></isu-input-jedate>
-    </template>
-  </demo-snippet>
+        }
+        .multi {
+          width: 340px;
+          margin-bottom: 10px;
+        }
+        #jedate1 {
+          --isu-input-jedate-height: 40px;
+        }
+      </style>
+    </custom-style>
+    <isu-input-jedate id="jedate1" class="input-date multi" label="年选择" format="YYYY" placeholder="YYYY" required></isu-input-jedate>
+    <isu-input-jedate class="input-date multi" font-size="small" label="年月选择" format="YYYY-MM" placeholder="YYYY-MM"></isu-input-jedate>
+    <isu-input-jedate class="input-date multi" label="年月日选择" format="MM-DD-YYYY" placeholder="MM-DD-YYYY"></isu-input-jedate>
+    <isu-input-jedate class="input-date multi" label="年月日时分秒选择" festival min="1900-01-01" max="2099-12-31"
+                      format="YYYY-MM-DD hh:mm:ss" placeholder="YYYY-MM-DD hh:mm:ss"></isu-input-jedate>
+    <isu-input-jedate class="input-date multi" label="时分秒选择" format="hh:mm:ss"
+                      min="01:02:08" max="15:25:35" placeholder="hh:mm:ss"></isu-input-jedate>
+  </template>
+</demo-snippet>
 
 <h3>英文语言</h3>
 <demo-snippet>
