--- a/demo/isu-select-tree/index.html
+++ b/demo/isu-select-tree/index.html
@@ -55,7 +55,7 @@
   <h3>isu-select-tree Demo,只支持单选</h3>
   <demo-snippet>
     <template>
-      <isu-select-tree id="orgtree" label="组织(模拟url)" placeholder="请选择" src="/init.do" value="2111"></isu-select-tree>
+      <isu-select-tree id="orgtree" label="组织(模拟url)" font-size="small" placeholder="请选择" src="/init.do" value="2111"></isu-select-tree>
       <isu-select-tree id="orgtree2" label="组织（传入数据）" placeholder="请选择" value="21"></isu-select-tree>
       <isu-select-tree id="orgtree3" label="选项rdaio" placeholder="请选择" src="/init.do" value="2111" show-radio></isu-select-tree>
       <isu-select-tree id="orgtree4" label="显示搜索框" placeholder="请选择" src="/init.do" value="2111" show-search-input></isu-select-tree>
