树相关demo修改

--- a/demo/isu-select-tree/index.html
+++ b/demo/isu-select-tree/index.html
@@ -122,7 +122,7 @@
     <template>
       <isu-select-tree-new id="neworgtree1" label="单选" placeholder="请选择" src="/init.do" show-search-input
                            value="2111"></isu-select-tree-new>
-      <isu-select-tree-new id="neworgtree2" label="多选" placeholder="请选择" src="/init.do" show-search-input
+      <isu-select-tree-new id="neworgtree2" label="多选" placeholder="请选择" src="/init.do" ac
                            multi value="3,31,32"></isu-select-tree-new>
       <isu-select-tree-new id="neworgtree3" label="多选有搜索框" placeholder="请选择" src="/init.do" show-search-input
                            multi value="3,31,32"></isu-select-tree-new>
