--- a/demo/isu-tree/index.html
+++ b/demo/isu-tree/index.html
@@ -297,11 +297,11 @@
         <style>
         </style>
       </custom-style>
-      <isu-tree id="tree5" multi require-query></isu-tree>
+      <isu-tree id="tree5" multi show-search-input></isu-tree>
       <script>
         tree5.data = [
           { id: 1, label: '第1个', children: [
-              { id: 11, label: '二级第1个',  children: [] },
+              { id: 11, label: '二级第1个', children: [] },
               { id: 12, label: '二级第2个', disabled: true, children: [] },
               { id: 13, label: '二级第3个', children: [] },
               { id: 14, label: '二级第4个', children: [] },
@@ -565,7 +565,7 @@
         <style>
         </style>
       </custom-style>
-      <isu-tree id="tree9" multi default-checked-keys="[11,21]"></isu-tree>
+      <isu-tree id="tree9" multi value="211,213"></isu-tree>
       <script>
         tree9.data = [
           { id: 1, label: '第1个', children: [
