showAll属性意义添加

--- a/demo/isu-tree/index.html
+++ b/demo/isu-tree/index.html
@@ -326,7 +326,7 @@
                     showLevel2:true,
                     children: [
                       { id: 2111, label: '1', children: [] },
-                      { id: 2112, label: '2', disabled: true, checked: true, children: [] },
+                      { id: 2112, label: '2', children: [] },
                       { id: 2113, label: '3', children: [] },
                       { id: 2114, label: '4', children: [] },
                       { id: 2115, label: '5', children: [] }
