选择树组件优化和样式更新

--- a/demo/isu-select-tree/index.html
+++ b/demo/isu-select-tree/index.html
@@ -132,6 +132,8 @@
                            multi only-select-level="3,4" init-filter-value="2111,2115"
       ></isu-select-tree-new>
       <isu-select-tree-new id="neworgtree6" label="(只读）" placeholder="请选择" src="/init.do"
+                           multi value="3,31,32" readonly></isu-select-tree-new>
+      <isu-select-tree-new id="neworgtree7" label="(只读，isView）" placeholder="请选择" src="/init.do"
                            multi value="3,31,32" readonly is-view></isu-select-tree-new>
       <script>
       </script>
