textarea组件设置行数无效的问题修改

--- a/demo/isu-textarea/index.html
+++ b/demo/isu-textarea/index.html
@@ -63,7 +63,7 @@
   <h3>Required isu-textarea</h3>
   <demo-snippet>
     <template>
-      <isu-textarea label="备注" required prompt="请输入备注"></isu-textarea>
+      <isu-textarea label="备注" required prompt="请输入备注" rows="4"></isu-textarea>
     </template>
   </demo-snippet>
 
