--- a/demo/isu-button/index.html
+++ b/demo/isu-button/index.html
@@ -46,11 +46,9 @@
             margin: 10px;
           }
 
-          #btn2 {
-            --isu-button: {
-              background: #000;
-              color: white
-            };
+          #btn2::part(btn) {
+            background: #000;
+            color: white
           }
           #btn3 {
             --isu-button: {
